# projeto-fiap-fase-3

./: .gitignore  README.md  app.py  classification_report.csv  pyproject.toml  requirements.txt  train.py
models/: modelo_lendario_final.joblib
